infrastructure/network.yml
AWSTemplateFormatVersion: '2010-09-09'

Description: Net farm Network and Load Balancer Infrastructure

Parameters:
  ProjectName:
    Type: String
    Default: netfarm

  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.1.0/24

  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.2.0/24

  ContainerPort:
    Type: Number
    Default: 3000

  DomainName:
    Type: String
    Description: Domain name for the API

  CertificateArn:
    Type: String
    Description: ACM certificate ARN


Resources:

  # ==========================================================
  # VPC
  # ==========================================================

  VPC:
    Type: AWS::EC2::VPC

    Properties:
      CidrBlock: !Ref VpcCIDR

      EnableDnsSupport: true

      EnableDnsHostnames: true

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-vpc'


  # ==========================================================
  # INTERNET GATEWAY
  # ==========================================================

  InternetGateway:
    Type: AWS::EC2::InternetGateway

    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-igw'


  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment

    Properties:
      VpcId: !Ref VPC

      InternetGatewayId: !Ref InternetGateway


  # ==========================================================
  # PUBLIC SUBNET 1
  # ==========================================================

  PublicSubnet1:
    Type: AWS::EC2::Subnet

    Properties:
      VpcId: !Ref VPC

      CidrBlock: !Ref PublicSubnet1CIDR

      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: !Ref AWS::Region

      MapPublicIpOnLaunch: true

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-subnet-1'


  # ==========================================================
  # PUBLIC SUBNET 2
  # ==========================================================

  PublicSubnet2:
    Type: AWS::EC2::Subnet

    Properties:
      VpcId: !Ref VPC

      CidrBlock: !Ref PublicSubnet2CIDR

      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: !Ref AWS::Region

      MapPublicIpOnLaunch: true

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-subnet-2'


  # ==========================================================
  # PUBLIC ROUTE TABLE
  # ==========================================================

  PublicRouteTable:
    Type: AWS::EC2::RouteTable

    Properties:
      VpcId: !Ref VPC

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-route-table'


  # ==========================================================
  # INTERNET ROUTE
  # ==========================================================

  PublicRoute:
    Type: AWS::EC2::Route

    DependsOn:
      - InternetGatewayAttachment

    Properties:
      RouteTableId: !Ref PublicRouteTable

      DestinationCidrBlock: 0.0.0.0/0

      GatewayId: !Ref InternetGateway


  # ==========================================================
  # SUBNET ROUTES
  # ==========================================================

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:
      RouteTableId: !Ref PublicRouteTable

      SubnetId: !Ref PublicSubnet1


  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:
      RouteTableId: !Ref PublicRouteTable

      SubnetId: !Ref PublicSubnet2


  # ==========================================================
  # ALB SECURITY GROUP
  # ==========================================================

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:
      GroupDescription: Security Group for Application Load Balancer

      VpcId: !Ref VPC

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:

        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-alb-sg'


  # ==========================================================
  # ECS SECURITY GROUP
  # ==========================================================

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:
      GroupDescription: Security Group for ECS Tasks

      VpcId: !Ref VPC

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: !Ref ContainerPort
          ToPort: !Ref ContainerPort
          SourceSecurityGroupId: !Ref ALBSecurityGroup

      SecurityGroupEgress:

        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-ecs-sg'


  # ==========================================================
  # APPLICATION LOAD BALANCER
  # ==========================================================

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer

    Properties:
      Name: !Sub '${ProjectName}-alb'

      Scheme: internet-facing

      Type: application

      SecurityGroups:
        - !Ref ALBSecurityGroup

      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-alb'


  # ==========================================================
  # TARGET GROUP
  # ==========================================================

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

    Properties:
      Name: !Sub '${ProjectName}-tg'

      VpcId: !Ref VPC

      Protocol: HTTP

      Port: !Ref ContainerPort

      TargetType: ip

      HealthCheckEnabled: true

      HealthCheckProtocol: HTTP

      HealthCheckPort: traffic-port

      HealthCheckPath: /health

      HealthCheckIntervalSeconds: 30

      HealthCheckTimeoutSeconds: 5

      HealthyThresholdCount: 2

      UnhealthyThresholdCount: 3

      Matcher:
        HttpCode: '200'

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-target-group'


  # ==========================================================
  # ALB LISTENER
  # ==========================================================

  ALBHttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener

    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer

      Port: 80

      Protocol: HTTP

      DefaultActions:

        - Type: redirect

          RedirectConfig:
            Protocol: HTTPS

            Port: '443'

            StatusCode: HTTP_301

  # ==========================================================
  # netfarm PATH RULE
  # ==========================================================

  netfarmPathRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule

    Properties:

      ListenerArn: !Ref ALBHttpListener

      Priority: 10

      Conditions:

        - Field: path-pattern
          Values:
            - /netfarm
            - /netfarm/*

      Actions:

        - Type: forward

          TargetGroupArn: !Ref TargetGroup
          
Outputs:

  # ==========================================================
  # VPC
  # ==========================================================

  VpcId:

    Description: VPC ID

    Value: !Ref VPC

    Export:
      Name: !Sub '${AWS::StackName}-VpcId'


  # ==========================================================
  # SUBNET 1
  # ==========================================================

  PublicSubnet1:

    Description: Public Subnet 1

    Value: !Ref PublicSubnet1

    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet1'


  # ==========================================================
  # SUBNET 2
  # ==========================================================

  PublicSubnet2:

    Description: Public Subnet 2

    Value: !Ref PublicSubnet2

    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet2'


  # ==========================================================
  # ECS SECURITY GROUP
  # ==========================================================

  SecurityGroup:

    Description: ECS Security Group

    Value: !Ref ECSSecurityGroup

    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroup'


  # ==========================================================
  # ALB SECURITY GROUP
  # ==========================================================

  ALBSecurityGroup:

    Description: ALB Security Group

    Value: !Ref ALBSecurityGroup

    Export:
      Name: !Sub '${AWS::StackName}-ALBSecurityGroup'


  # ==========================================================
  # TARGET GROUP
  # ==========================================================

  TargetGroupArn:

    Description: Target Group ARN

    Value: !Ref TargetGroup

    Export:
      Name: !Sub '${AWS::StackName}-TargetGroupArn'


  # ==========================================================
  # LOAD BALANCER ARN
  # ==========================================================

  LoadBalancerArn:

    Description: Application Load Balancer ARN

    Value: !Ref ApplicationLoadBalancer


  # ==========================================================
  # LOAD BALANCER DNS
  # ==========================================================

  LoadBalancerDNS:

    Description: Application Load Balancer DNS

    Value: !GetAtt ApplicationLoadBalancer.DNSName

    Export:
      Name: !Sub '${AWS::StackName}-LoadBalancerDNS'


  # ==========================================================
  # LOAD BALANCER URL
  # ==========================================================

  LoadBalancerURL:

    Description: Application Load Balancer URL

    Value: !Sub 'http://${ApplicationLoadBalancer.DNSName}'
